After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 80134 - Duplicating sheet doesn't duplicate groups
Duplicating sheet doesn't duplicate groups
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Main System
1.0.x
Other All
: High critical
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2002-04-28 17:42 UTC by Almer S. Tigelaar
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Almer S. Tigelaar 2002-04-28 17:42:43 UTC
To reproduce :
- Start gnumeric with a clean workbook
- Group some rows (e.g. rows 4 to 6).
- Duplicate the sheet.
- Notice that on the duplicate the grouped rows are no longer grouped.

(this bug is also present in 1.1.x)
Comment 1 Jody Goldberg 2002-04-29 18:50:40 UTC
Fixed in 1.1 and 1.0